# owl-face-rec

./: .gitignore  .gitlab-ci.yml  CI-CD.md  Cargo.toml  Dockerfile  README.md  docker-compose.example.yml  docker-compose.yml
models/: instructions.txt
src/: handlers.rs  main.rs
