[package]
name = "owl-face-rec"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
base64 = "0.22"
ort = { version = "2.0.0-rc.1", features = ["download-binaries"] }
image = "0.25"
ndarray = "0.15"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
rayon = "1.10"
